@@ -260,4 +260,4 @@
 #
 ## Rebuild the filelog based on filesystem info
 #
-#@MACRO:filelog-rebuild|Rebuild the filelog based on filesystem info:{m:exe} noop --preexec `{m:exe} -x {siteroot} -R lom "mode!=8 || size==0" or regex basepath,"^\." -print "dir {path}{:n}size {size}{:n}files 0{:n}time {mtime}{:n}user {user}{:n}group {group}{:n}status 0{:n}" | {m:exe} -z altlog -vvvv --gz 2 --altlog /tmp/glutil.frb.$$.tmp --nobackup; mv /tmp/glutil.frb.$$.tmp {m:q:altlog@file}`
+#@MACRO:filelog-rebuild|Rebuild the filelog based on filesystem info:{m:exe} noop --preexec `{m:exe} -x {siteroot} -R lom "mode!=8 || size==0" or regex basepath,"^\." -print "file {path}{:n}size {size}{:n}files 0{:n}time {mtime}{:n}user {uid}{:n}group {gid}{:n}status 0{:n}" | {m:exe} -z altlog -vvvv --gz 2 --altlog /tmp/glutil.frb.$$.tmp --nobackup; mv /tmp/glutil.frb.$$.tmp {m:q:altlog@file}`
