@@ -15,7 +15,7 @@ vstr=`echo "${@}" | sed -r 's/ /.*/'`
 }
 
 ${GLUTIL} -q altlog --sort num,asc,time --sortmethod qsort --altlog ${FILE_LOG_PATH} --silent \
-	iregexi basedir,"${vstr}" -print "{dir}  [{?m:size/1024} k] [{?tl:time#%m/%d/%y}][{?tl:time#%H}:{?tl:time#%M}:{?tl:time#%S}]"
+	iregexi basedir,"${vstr}" -print "{file}  [{?m:size/1024} k] [{?tl:time#%m/%d/%y}][{?tl:time#%H}:{?tl:time#%M}:{?tl:time#%S}]"
 
 exit 0
 
